Nuevos cambios en nosotros

--- a/procedimientos/nosotros.html
+++ b/procedimientos/nosotros.html
@@ -105,7 +105,9 @@
               <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                <a class="dropdown-item gris02" href="#">Nosotros</a>  
+                <a class="dropdown-item gris02" href="#">Nosotros</a>
+                <a class="dropdown-item gris02" href="#">Documentos académicos</a> 
+                <a class="dropdown-item gris02" href="#">Cronograma académico</a>  
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -177,7 +179,9 @@
               <img src="../images/banner.jpg" class="img-fluid banner" alt="Responsive image">
             </div>            
           </div>
-          <div class="row nosotros">
+          <div class="row">
+            <div class="col-9 informacion-nosotros">
+              <div class="row nosotros">
                 <div class="col-md-8 ml-auto mr-auto text-center">
                     <h3>ACERCA DE NOSOTROS</h3>
                     <p>
@@ -189,17 +193,16 @@
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <h4>Misión</h4>
                     <p>
-                        La Dirección Universitaria de Formación Académica (DUFA), tiene como propósito, hacer posible que todas las actividades académicas de la universidad se desarrollen con eficiencia y eficacia, generando procedimientos agiles y sencillos.
+                      La Dirección Universitaria de Formación Académica (DUFA), tiene como propósito, hacer posible que todas las actividades académicas de la universidad se desarrollen con eficiencia y eficacia, generando procedimientos agiles y sencillos.
                     </p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <h4>Visión</h4>
                     <p>
-                        La Dirección Universitaria de Formación Académica (DUFA), tiene como propósito, hacer posible que todas las actividades académicas de la universidad se desarrollen con eficiencia y eficacia, generando procedimientos agiles y sencillos.
+                      La Dirección Universitaria de Formación Académica (DUFA), debe constituirse en un órgano de gestión moderna, con tecnología de punta, que acompañe al desarrollo sostenido de la Universidad.
                     </p>
                 </div>
           </div>
-
           <div class="row nosotros">
             <div class="col-lg-6 col-md-6 col-sm-12 ">
               <img src="../images/banner3.jpg" class="img-fluid mb-5" alt="universidad">
@@ -213,26 +216,40 @@
               <h4>Política de Calidad</h4>
               <p>Desarrollar procesos de mejora continua orientados a la búsqueda de satisfacción total de nuestros usuarios.</p>
             </div>
-            <div class="col-12 text-center nosotros">
+            <div class="col-12 text-center nosotros mb-5">
               <h4>ORGANIGRAMA</h4>
-              <img src="../images/organigrama.png" class="img-fluid zoom mb-5" alt="organigrama">
+              <!-- <img src="../images/organigrama.png" class="img-fluid zoom mb-5" alt="organigrama"> -->
+              <iframe src="../formatos/organigrama.pdf" style="width:80%; height:500px;" frameborder="0"> </iframe>
             </div>
           </div>
-  
+            </div>
+            <div class="col-3">
+              <div class="wd-men-pag menu-nosotros">
+                <h2>NOSOTROS</h2>
+                <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="https://www.unsa.edu.pe/resena-historica/">Reseña Histórica</a></li>
+                    <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="nosotros.html">Misión</a></li>
+                    <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="nosotros.html">Visión</a></li>
+                    <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="https://www.unsa.edu.pe/rector-de-la-universidad/">Politica de Calidad</a></li>
+                    <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="https://www.unsa.edu.pe/vice-rectora-academica/">Organización</a></li>
+                    <li id="menu-item-632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-632"><a href="https://www.unsa.edu.pe/vice-rector-de-investigacion/">Organigrama</a></li>
+
+                </ul>                                          
+            </div>
+            </div>
+          </div>
         </div>
        
         
       <!-- FOOTER -->
       <div class="row footer style-secondfooter">
         <div class="col-md-6 text-left">
-            Universidad Nacional de San Agustin de Arequipa <br>
-            Calle Santa Catalina Nro. 117. Cercado - Arequipa<br>
-            Telf. 51-54-237808 - Email: rectorado@unsa.edu.pe
+          Universidad Nacional de San Agustin de Arequipa <br>
+          Calle Universidad 107 Cercado - Arequipa<br>
         </div>
         <div class="col-md-6 text-right">
-            Dirección Universitaria de Formación Académica<br>
-            Email: dufa@unsa.edu.pe<br>
-             Telf. 51-54-282269
+          Dirección Universitaria de Formación Académica<br>
+          Email: dufa@unsa.edu.pe<br>
+          Telf.(054) 391911 
         </div>
     </div>
       <!-- CREDITOS -->
