--- a/procedimientos/organizacion.html
+++ b/procedimientos/organizacion.html
@@ -93,7 +93,9 @@
               <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>  
+                <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>
+                <a class="dropdown-item gris02" href="#">Documentos académicos</a> 
+                <a class="dropdown-item gris02" href="#">Cronograma académico</a>  
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -156,54 +158,141 @@
       </div>
       <!-- MAIN- PREGUNTAS -->
       <div class="principal">
-        <h2 class="title-section" >PREGUNTAS FRECUENTES</h2>
-        <ul class="row" id="preg-frec">
-            <li>
-                <h3 class="col-12">¿Cuánto tiempo está vigente el pago de no adeudar bienes o material bibliográfico de la universidad?</h3>
-                <div class="col-12">
-                    <p>
-                        La evaluación será tomada en forma virtual el domingo 12 de julio, en el caso de aquellos postulantes que postulan a Medicina, Enfermería, Arquitectura y Artes previamente rendirán la Evaluación de Perfil Vocacional el domingo 5 de julio.<br>
-                        El horario será dado a conocer a través de su nuevo correo electrónico institucional que se le generará luego de aceptar la evaluación virtual.
-                    </p>
+        <div class="row">
+            <div class="col-12">
+              <img src="../images/banner.jpg" class="img-fluid banner" alt="Responsive image">
+            </div>            
+          </div>
+        <div class="row">
+            <div class="col-12 col-md-9 table-responsive-sm">
+                <h2 class="title-section" >ORGANIZACIÓN</h2>
+                <table class="table table-hover table-sm">
+                    <thead>
+                      <tr>
+                        <th scope="col">Cargo</th>
+                        <th scope="col">Nombres y Apellidos</th>
+                        <th scope="col">E-mail</th>
+                      </tr>
+                    </thead>
+
+                    <tbody>
+                      <tr>
+                        <td>Director</td>
+                        <td>Ing. Oscar Omar Nuñez Tejada</td>
+                        <td>onunezt@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Secretaria de Dirección</td>
+                        <td>Srta. Ivonne Castro</td>
+                        <td>icastror@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Mesa de Partes e Informes</td>
+                        <td >Srta. Virginia Motta</td>
+                        <td>vicky@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td >Soporte Informático </td>
+                        <td >Sr. Kenny Begazo </td>
+                        <td>kbegazo@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td >Soporte Informático</td>
+                        <td >Sr. Felix Leon </td>
+                        <td>fl@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Recursos Educativos</td>
+                        <td >Ing. Yosheff Ortiz  </td>
+                        <td> yortizv@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Gestión Curricular</td>
+                        <td >Srta. Madeleyne Banda  </td>
+                        <td> mbandaa@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Gestión Curricular</td>
+                        <td >Srta. Melania Flores    </td>
+                        <td> mfloresz@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Matricula)</td>
+                        <td >Srta. Celeste Marroquín    </td>
+                        <td> cmarroquinc@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Evaluaciones)</td>
+                        <td >Srta. Josefina Molina  </td>
+                        <td> jmolina@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Docentes)</td>
+                        <td >Sr. Valeriano Sánchez</td>
+                        <td>vsanchez1@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Estadística)</td>
+                        <td >Sr. José León</td>
+                        <td>jleonq@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Archivo)</td>
+                        <td >Sr. Victor Velarde </td>
+                        <td>evelardec@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Segunda Especialidad)</td>
+                        <td >Sr. Ernesto Siu </td>
+                        <td>esiug@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Posgrado)</td>
+                        <td >Srta. Fanny Apaza  </td>
+                        <td>fanny@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Certificaciones)</td>
+                        <td >Srta. Luis Castro </td>
+                        <td>lcastrop@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Certificaciones)</td>
+                        <td >Srta. Patricia Sosa  </td>
+                        <td>psosa@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Registro Académico (Certificaciones)</td>
+                        <td >Sr. Ezer Chalco </td>
+                        <td>echalco1@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Estudios Generales</td>
+                        <td >Lic. Olivia Jaén   </td>
+                        <td>ojaen@unsa.edu.pe</td>
+                      </tr>
+                      <tr>
+                        <td>Oficina de Estudios Generales</td>
+                        <td >Sr. Ronald Flores </td>
+                        <td> rflorescajc@unsa.edu.pe</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="wd-men-pag menu-nosotros">
+                    <h2>NOSOTROS</h2>
+                    <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="https://www.unsa.edu.pe/resena-historica/">Reseña Histórica</a></li>
+                        <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="nosotros.html">Misión</a></li>
+                        <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="nosotros.html">Visión</a></li>
+                        <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="https://www.unsa.edu.pe/rector-de-la-universidad/">Politica de Calidad</a></li>
+                        <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="https://www.unsa.edu.pe/vice-rectora-academica/">Organización</a></li>
+                        <li id="menu-item-632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-632"><a href="https://www.unsa.edu.pe/vice-rector-de-investigacion/">Organigrama</a></li>
+
+                    </ul>                                          
                 </div>
-            </li>
-            <li>
-                <h3 class="col-12">¿Dónde debo realizar los pagos de los tramites o constancias?</h3>
-                <div class="col-12">
-                    <p>El Reglamento de Admisión de la UNSA, NO permite realizar cambios de carrera.</p>
-                </div>
-            </li>
-            <li>
-                <h3 class="col-12">¿Dónde encuentro los formatos de solicitud para realizar un tramite?</h3>
-                <div class="col-12">
-                    <p>Si le quedó pendiente la confirmación de inscripción, podrá hacerlo entre el 23 al 28 de junio, siendo prioridad si usted postula a Medicina, Enfermería, Arquitectura o Artes</p>
-                </div>
-            </li>
-            <li>
-                <h3 class="col-12">¿Qué pasa si no recojo mi carné universitario en el plazo indicado, a donde debo ir? </h3>
-                <div class="col-12">
-                    <p>Cuando usted suba la declaración jurada de que si rendirá el examen virtual, tendrá que confirmar y validar un correo electrónico de contacto, es el momento en el que puede usar un correo electrónico nuevo, sin embargo posterior a ello tendrá que usar el correo electrónico institucional que le será brindado.</p>
-                 </div>
-            </li>
-            <li>
-              <h3 class="col-12">¿Cuál es el costo de los trámites académicos?</h3>
-              <div class="col-12">
-                  <p>Cuando usted suba la declaración jurada de que si rendirá el examen virtual, tendrá que confirmar y validar un correo electrónico de contacto, es el momento en el que puede usar un correo electrónico nuevo, sin embargo posterior a ello tendrá que usar el correo electrónico institucional que le será brindado.</p>
-               </div>
-            </li>
-            <li>
-              <h3 class="col-12">¿Cuánto tiempo demora un trámite solicitado?</h3>
-              <div class="col-12">
-                  <p>Cuando usted suba la declaración jurada de que si rendirá el examen virtual, tendrá que confirmar y validar un correo electrónico de contacto, es el momento en el que puede usar un correo electrónico nuevo, sin embargo posterior a ello tendrá que usar el correo electrónico institucional que le será brindado.</p>
-               </div>
-            </li>
-            <li>
-              <h3 class="col-12">¿Dónde se encuentra la oficina de DUFA?</h3>
-              <div class="col-12">
-                  <p>Cuando usted suba la declaración jurada de que si rendirá el examen virtual, tendrá que confirmar y validar un correo electrónico de contacto, es el momento en el que puede usar un correo electrónico nuevo, sin embargo posterior a ello tendrá que usar el correo electrónico institucional que le será brindado.</p>
-               </div>
-            </li>
-        </ul>
+            </div>
+        </div>
       </div>
 
       <!-- FOOTER -->
@@ -242,8 +331,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <!-- MAPA -->
-    <!-- <script src="js/scripts.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiDgCnpLVAp2jBNgKzxwF8mssTuLRlJ3w"></script> -->
+    
   </body>
 </html>
